Fix shifting breadcrumbs on hover

--- a/src/css/breadcrumbs.css
+++ b/src/css/breadcrumbs.css
@@ -46,6 +46,6 @@ a + .breadcrumbs {
 .breadcrumbs li:last-child a {
   color: var(--link-font-color);
   border-radius: 1.5rem;
-  padding: 0;
+  background-color: var(--link-highlight-background-color);
   text-decoration: none;
 }
